Tabbar: DND improvements

- Fix crash, always ensure we drag the current document that has a view
- Allow to start drag when we have passed 1/4th of the viewspace-rect
height

BUG: 456844